--- a/11 - 2D Graphics/6 - Brushes/2 - Tile Brushes/1 - DrawingBrush/DrawingBrush.csproj
+++ b/11 - 2D Graphics/6 - Brushes/2 - Tile Brushes/1 - DrawingBrush/DrawingBrush.csproj
@@ -55,6 +55,27 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Tile.xaml.cs">
+      <DependentUpon>Tile.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TileViewBoxFlipXY.xaml.cs">
+      <DependentUpon>TileViewBoxFlipXY.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TileViewBox.xaml.cs">
+      <DependentUpon>TileViewBox.xaml</DependentUpon>
+    </Compile>
+    <Page Include="TileFlipX.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TileFlipXY.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TileFlipY.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -63,10 +84,31 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="TileFlipX.xaml.cs">
+      <DependentUpon>TileFlipX.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TileFlipXY.xaml.cs">
+      <DependentUpon>TileFlipXY.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TileFlipY.xaml.cs">
+      <DependentUpon>TileFlipY.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Tile.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TileViewBoxFlipXY.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TileViewBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
