--- a/11 - 2D Graphics/6 - Brushes/2 - Tile Brushes/4 - Brushes As Opacity Masks/BrushesAsOpacityMasks.csproj
+++ b/11 - 2D Graphics/6 - Brushes/2 - Tile Brushes/4 - Brushes As Opacity Masks/BrushesAsOpacityMasks.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WPFUnleashed</RootNamespace>
-    <AssemblyName>WPFUnleashed</AssemblyName>
+    <AssemblyName>BrushesAsOpacityMasks</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -55,6 +55,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="BetterReflection.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="GhostClipped.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="GhostClippedWithOpacity.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -62,6 +74,15 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="BetterReflection.xaml.cs">
+      <DependentUpon>BetterReflection.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="GhostClipped.xaml.cs">
+      <DependentUpon>GhostClipped.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="GhostClippedWithOpacity.xaml.cs">
+      <DependentUpon>GhostClippedWithOpacity.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
